--- a/nfl.ipynb
+++ b/nfl.ipynb
@@ -2,9 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "5d85b81e-d7dc-42e4-8ee2-8727a2e6f673",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -15,9 +17,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "a3bff3e9-41bf-42df-8024-f6415fc4ac87",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
@@ -27,9 +31,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 3,
    "id": "6376fb23-cf9e-4190-bda3-e64198bc3f8d",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -247,13 +253,13 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "plays = pd.read_csv('plays.csv')\n",
+    "plays = pd.read_csv('~/Desktop/data110/plays.csv')\n",
     "\n",
     "print(plays.shape)\n",
     "plays.head()"
@@ -261,9 +267,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 4,
    "id": "6ff6e2d5-f6ba-4b08-a0b8-79ea8ada77e2",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# encode down and quarter categorical variables into true-false columns\n",
@@ -272,9 +280,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 5,
    "id": "e54f2bde-b0bd-43c1-9166-3b521b4386a4",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -337,9 +347,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 6,
    "id": "aa6b8294-b1ec-42db-a22f-f83db47c0030",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -347,7 +359,7 @@
        "((18033, 28), (18033,))"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,9 +379,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 7,
    "id": "43c49c59-aec5-4ede-bffb-67f9e5d2084a",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -409,7 +423,6 @@
     }
    ],
    "source": [
-    "# we can go ahead and drop a few more features that will definitely not be relevant and / or useable\n",
     "X = X.drop(columns=['gameId',         # these are identifying features that play no role in predicting epa\n",
     "                    'playId', \n",
     "                    'possessionTeam', # team is an irrelevant factor\n",
@@ -426,16 +439,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "a49a587c-e757-48a9-9fb9-331a68a4efc8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X['passResult'] = X.passResult.replace({'I': 0, 'C': 1, 'S': 2, 'IN': 3})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "b6198419-a7d5-4496-82dd-f13d9f9f9f0e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X['down_2'] = X.down_2.astype(int)\n",
+    "X['down_3'] = X.down_3.astype(int)\n",
+    "X['down_4'] = X.down_4.astype(int)\n",
+    "\n",
+    "X['quarter_2'] = X.quarter_2.astype(int)\n",
+    "X['quarter_3'] = X.quarter_3.astype(int)\n",
+    "X['quarter_4'] = X.quarter_4.astype(int)\n",
+    "X['quarter_5'] = X.quarter_5.astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "6dc5fb3a-c669-4506-975d-96127f2ae338",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[20], line 10\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(time)\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m):\n\u001b[0;32m      9\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m j \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m---> 10\u001b[0m         count \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(time[i][j]) \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m60\u001b[39m\n\u001b[0;32m     11\u001b[0m     \u001b[38;5;28;01melif\u001b[39;00m j \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m     12\u001b[0m         count \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(time[i][j])\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "mmss = X.gameClock.str.split(\":\")\n",
+    "\n",
+    "seconds = []\n",
+    "\n",
+    "for time in mmss:\n",
+    "    count = 0\n",
+    "    for i in range(len(mmss)):\n",
+    "        for j in range(len(time)):\n",
+    "            if j == 0:\n",
+    "                count += int(time[i][j]) * 60\n",
+    "            elif j == 1:\n",
+    "                count += int(time[i][j])\n",
+    "            seconds.append(count)\n",
+    "\n",
+    "print(seconds)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6198419-a7d5-4496-82dd-f13d9f9f9f0e",
+   "id": "0397e852-1376-48d7-8c76-2bb9d7aff87c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -457,7 +527,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
